addons/prometheus/base/resources/ingress-route.yaml
# TODO: endpoint access secure
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-server
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: KUSTOMIZED
      priority: 10
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
#  tls:
#    certResolver: default
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-server
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: KUSTOMIZED
      priority: 10
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
#  tls:
#    certResolver: default
